RESOLVED FIXED72895
[Chromium] WebAccessibilityNotification should use AssertMatchingEnums.
https://bugs.webkit.org/show_bug.cgi?id=72895
Summary [Chromium] WebAccessibilityNotification should use AssertMatchingEnums.
Dominic Mazzoni
Reported 2011-11-21 09:36:03 PST
Instead of a switch statement, a WebCore::AXObjectCache::AXNotification can be converted to a WebAccessibilityNotification with a simple cast, checked by AssertMatchingEnums.cpp.
Attachments
Patch (9.81 KB, patch)
2011-11-21 09:49 PST, Dominic Mazzoni
no flags
Patch for landing (9.81 KB, patch)
2011-11-21 11:35 PST, Dominic Mazzoni
no flags
Dominic Mazzoni
Comment 1 2011-11-21 09:49:44 PST
WebKit Review Bot
Comment 2 2011-11-21 09:53:58 PST
Please wait for approval from fishd@chromium.org before submitting because this patch contains changes to the Chromium public API.
chris fleizach
Comment 3 2011-11-21 11:13:53 PST
Comment on attachment 116102 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=116102&action=review > Tools/DumpRenderTree/chromium/WebViewHost.cpp:598 > + notificationName = "MenuListValueItemSelected"; The actual value is named differently than the enum
chris fleizach
Comment 4 2011-11-21 11:16:24 PST
Comment on attachment 116102 [details] Patch Otherwise looks ok.
Darin Fisher (:fishd, Google)
Comment 5 2011-11-21 11:22:09 PST
Comment on attachment 116102 [details] Patch Cool, LGTM
Dominic Mazzoni
Comment 6 2011-11-21 11:35:07 PST
Created attachment 116111 [details] Patch for landing
WebKit Review Bot
Comment 7 2011-11-21 13:04:20 PST
Comment on attachment 116111 [details] Patch for landing Clearing flags on attachment: 116111 Committed r100948: <http://trac.webkit.org/changeset/100948>
WebKit Review Bot
Comment 8 2011-11-21 13:04:24 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.