[Chromium] WebAccessibilityNotification should use AssertMatchingEnums. https://bugs.webkit.org/show_bug.cgi?id=72895

Reviewed by Chris Fleizach.

Source/WebKit/chromium:

* public/WebAccessibilityNotification.h:
* src/AssertMatchingEnums.cpp:
* src/ChromeClientImpl.cpp:
(WebKit::toWebAccessibilityNotification):

Tools:

* DumpRenderTree/chromium/WebViewHost.cpp:
(WebViewHost::postAccessibilityNotification):


Canonical link: https://commits.webkit.org/89437@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@100948 268f45cc-cd09-0410-ab3c-d52691b4dbfc